# pretty-jupyter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  MANIFEST.in  README.md  demo.ipynb  make.ps1  pyproject.toml  requirements-win.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  requirements-docs.txt  requirements_docs.txt
docs/cheatsheet/: cheatsheet.tex
docs/source/: changelog.rst  cli.rst  cli_settings.rst  code_folding.rst  conf.py  custom_template.rst  getting_started.rst  index.rst  install.rst  jinja_markdown.rst  metadata.rst  metadata_settings.rst  page_header.rst  pdf.rst  quickstart.rst  styling.rst  styling_settings.rst  tabset.rst  title.rst  toc.rst  usage.rst
env/: compile.ps1  install.ps1  install.sh  sync.ps1  sync.sh  up.ps1
examples/: demo.ipynb
src/pretty_jupyter/: __init__.py  __main__.py  _magics.py  _preprocessors.py  console.py  constants.py  magics.py  testing.py  tokens.py  utils.py
src/pretty_jupyter/config/metadata/: cell_spec.yaml  nb_defaults.yaml  nb_spec.yaml
src/pretty_jupyter/helpers/: __init__.py  matplotlib.py
src/pretty_jupyter/notebooks/: empty.ipynb
src/pretty_jupyter/preprocessors/: __init__.py  _metadata_preprocessor.py  _remove_input_preprocessor.py  _remove_output_preprocessor.py  _token_preprocessor.py
src/pretty_jupyter/quickstart/: empty.ipynb
src/pretty_jupyter/templates/pj/: base.html.j2  conf.json  index.html.j2
src/pretty_jupyter/templates/pj-legacy/: conf.json  index.html.j2
src/pretty_jupyter/templates/pj-pdf/: conf.json  index.tex.j2
src/pretty_jupyter/templates/pj/static/: pj-tabset.css  pj-toc.css  pj.css  pj.js  rmd.css
src/pretty_jupyter/templates/pj/static/libs/: jquery.stickytabs.js
src/pretty_jupyter/templates/pj/static/themes/: darkly.css  default.css  journal.css  paper.css  sandstone.css  simplex.css
src/pretty_jupyter/templates/rmd/: base.html.j2  conf.json
src/pretty_jupyter/templates/rmd/static/: rmd.css  rmd.js
tests/: conftest.py  test_cli.py
tests/fixture/: basic.ipynb  notebook.ipynb
tests/test_magics/: test_magics.py
tests/test_magics/fixture/: expected_jmarkdown.md  input_jmarkdown.md
tests/test_notebooks/: conftest.py  test_basic.py  test_cell_metadata.py  test_lang.py  test_tabset.py  test_toc.py  test_tokens.py
tests/test_notebooks/fixture/: basic.ipynb  cell_metadata.ipynb  lang.ipynb  tabset.ipynb  toc.ipynb  tokens.ipynb
tests/test_preprocessors/: test_preprocessors.py
tests/test_preprocessors/fixture/: input_code.py  input_jmarkdown.md  input_not_jmarkdown.md
tests/test_preprocessors/test_metadata_preprocessor/: conftest.py  test_metadata_preprocessor.py
tests/test_preprocessors/test_metadata_preprocessor/fixture/: code_cell.py  default_nb.yaml  expected_test_raw.yaml  jmd_cell.md  raw_cell.yaml
tests/test_tokens/: conftest.py  test_tokens.py
tests/test_tokens/fixture/: expected.md  input.md
