[metadata]
name = pretty-jupyter
description = Exports Jupyter notebook into beautiful and dynamic HTML report.
version = 2.0.0-rc0
license = GPLv3
license_file = LICENSE.md
platforms = any
author = Jan Palasek
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


project_urls =
    Source = https://github.com/JanPalasek/pretty-jupyter
    Bug Tracker = https://github.com/JanPalasek/pretty-jupyter/issues
    CI = https://github.com/JanPalasek/pretty-jupyter/actions

[options]
package_dir=
    =src
packages=find:
install_requires =
    click
    ipython>=7.1
    nbconvert>=6.0
    jinja2>=3.0
    ipython-genutils>=0.1
python_requires = >=3.0
include_package_data = True

[options.packages.find]
where=src

[options.data_files]
share/jupyter/nbconvert/templates/pj =
    src/pretty_jupyter/templates/pj/conf.json
    src/pretty_jupyter/templates/pj/index.html.j2
    src/pretty_jupyter/templates/pj/base.html.j2
share/jupyter/nbconvert/templates/pj/static =
    src/pretty_jupyter/templates/pj/static/pj.js
    src/pretty_jupyter/templates/pj/static/pj.css
    src/pretty_jupyter/templates/pj/static/pj-tabset.css
    src/pretty_jupyter/templates/pj/static/pj-toc.css
share/jupyter/nbconvert/templates/pj/static/themes =
    src/pretty_jupyter/templates/pj/static/themes/paper.css
    src/pretty_jupyter/templates/pj/static/themes/slate.css
    src/pretty_jupyter/templates/pj/static/themes/journal.css
share/jupyter/nbconvert/templates/pj/static/lib =
    src/pretty_jupyter/templates/pj/static/lib/bootstrap.min.js
    src/pretty_jupyter/templates/pj/static/lib/jquery-ui.min.js
    src/pretty_jupyter/templates/pj/static/lib/jquery.min.js
    src/pretty_jupyter/templates/pj/static/lib/jquery.stickytabs.js
    src/pretty_jupyter/templates/pj/static/lib/jquery.tocify.css
    src/pretty_jupyter/templates/pj/static/lib/jquery.tocify.js
    src/pretty_jupyter/templates/pj/static/lib/plotly.min.js
share/jupyter/nbconvert/templates/pj-pdf =
    src/pretty_jupyter/templates/pj-pdf/conf.json
    src/pretty_jupyter/templates/pj-pdf/index.tex.j2

[options.entry_points]
console_scripts = 
    pretty-jupyter = pretty_jupyter.__main__:cli
