[options.data_files]
share/jupyter/nbconvert/templates/pj =
    src/pretty_jupyter/templates/pj/conf.json
    src/pretty_jupyter/templates/pj/index.html.j2
    src/pretty_jupyter/templates/pj/base.html.j2
share/jupyter/nbconvert/templates/pj/static =
    src/pretty_jupyter/templates/pj/static/pj.js
    src/pretty_jupyter/templates/pj/static/pj.css
    src/pretty_jupyter/templates/pj/static/pj-tabset.css
    src/pretty_jupyter/templates/pj/static/pj-toc.css
share/jupyter/nbconvert/templates/pj/static/themes =
    src/pretty_jupyter/templates/pj/static/themes/bootstrap.css
    src/pretty_jupyter/templates/pj/static/themes/cerulean.css
    src/pretty_jupyter/templates/pj/static/themes/cosmo.css
    src/pretty_jupyter/templates/pj/static/themes/cyborg.css
    src/pretty_jupyter/templates/pj/static/themes/darkly.css
    src/pretty_jupyter/templates/pj/static/themes/flatly.css
    src/pretty_jupyter/templates/pj/static/themes/journal.css
    src/pretty_jupyter/templates/pj/static/themes/lumen.css
    src/pretty_jupyter/templates/pj/static/themes/paper.css
    src/pretty_jupyter/templates/pj/static/themes/readable.css
    src/pretty_jupyter/templates/pj/static/themes/sandstone.css
    src/pretty_jupyter/templates/pj/static/themes/simplex.css
    src/pretty_jupyter/templates/pj/static/themes/slate.css
    src/pretty_jupyter/templates/pj/static/themes/spacelab.css
    src/pretty_jupyter/templates/pj/static/themes/superhero.css
    src/pretty_jupyter/templates/pj/static/themes/united.css
    src/pretty_jupyter/templates/pj/static/themes/yeti.css
share/jupyter/nbconvert/templates/pj/static/libs =
    src/pretty_jupyter/templates/pj/static/libs/bootstrap.min.js
    src/pretty_jupyter/templates/pj/static/libs/jquery-ui.min.js
    src/pretty_jupyter/templates/pj/static/libs/jquery.min.js
    src/pretty_jupyter/templates/pj/static/libs/jquery.stickytabs.js
    src/pretty_jupyter/templates/pj/static/libs/jquery.tocify.css
    src/pretty_jupyter/templates/pj/static/libs/jquery.tocify.js
    src/pretty_jupyter/templates/pj/static/libs/plotly.min.js
    src/pretty_jupyter/templates/pj/static/libs/require.min.js
share/jupyter/nbconvert/templates/pj-legacy =
    src/pretty_jupyter/templates/pj-legacy/conf.json
    src/pretty_jupyter/templates/pj-legacy/index.html.j2
share/jupyter/nbconvert/templates/pj-pdf =
    src/pretty_jupyter/templates/pj-pdf/conf.json
    src/pretty_jupyter/templates/pj-pdf/index.tex.j2

